--- a/menu_project/menu/templates/menu/menu_list.html
+++ b/menu_project/menu/templates/menu/menu_list.html
@@ -170,15 +170,15 @@
     <div class="navigation-remote" id="navigationRemote">
         {% if prev_category %}
         <button class="remote-btn remote-btn-prev" id="remotePrev" title="이전 카테고리">
-            <img src="{% static 'left.png' %}" style="height: 30px;">
+            <img src="{% static 'left.png' %}" alt="Previous">
         </button>
         {% endif %}
         <button class="remote-btn remote-btn-top" id="remoteTop" title="맨 위로">
-            <img src="{% static 'up.png' %}" style="height: 30px;">
+            <img src="{% static 'up.png' %}" alt="Up">
         </button>
         {% if next_category %}
         <button class="remote-btn remote-btn-next" id="remoteNext" title="다음 카테고리">
-            <img src="{% static 'right.png' %}" style="height: 30px;">
+            <img src="{% static 'right.png' %}" alt="Next">
         </button>
         {% endif %}
     </div>
