fix:client fix7

--- a/menu_project/menu/templates/menu/menu_list.html
+++ b/menu_project/menu/templates/menu/menu_list.html
@@ -144,13 +144,13 @@
                                 <div class="menu-info">
                                     <div class="menu-title-line">
                                         <div class="menu-title">
-                                            {% if item.name_en %}<span class="menu-title-en">{{ item.name_en }}</span><br>{% endif %}{{ item.name }}
+                                            {% if item.name_en %}<span class="menu-title-en">{{ item.name_en|linebreaks }}</span><br>{% endif %}{{ item.name|linebreaks }}
                                         </div>
-                                        <div class="menu-price">{{ item.price }}</div>
+                                        <div class="menu-price">{{ item.price|linebreaks }}</div>
                                     </div>
-                                    <div== class="menu-description">{{ item.description }}</div>
+                                    <div class="menu-description">{{ item.description|linebreaks }}</div>
                                     {% if item.notes %}
-                                    <span class="menu-notes">{{ item.notes }}</span> 
+                                    <span class="menu-notes">{{ item.notes|linebreaks }}</span> 
                                     {% endif %}
                                 </div>
                             </div>
