--- a/menu_project/menu/templates/menu/menu_list.html
+++ b/menu_project/menu/templates/menu/menu_list.html
@@ -107,7 +107,7 @@
     <div class="background-with-gradient"></div>
     
     <!-- 검색 아이콘 -->
-    <button class="search-toggle" id="searchToggle">🔍</button>
+    <button class="search-toggle" id="searchToggle"><img src="{% static 'search.png' %}" alt="Search"></button>
     
     <!-- 검색 입력창 -->
     <form class="search-container" id="searchContainer" style="display: none;" action="{% url 'menu:search_redirect' %}" method="get">
@@ -119,7 +119,7 @@
     </form>
     
     <!-- 사이드 메뉴 버튼 -->
-    <button class="menu-toggle" id="menuToggle">☰</button>
+    <button class="menu-toggle" id="menuToggle"><img src="{% static 'menu.png' %}" alt="Menu"></button>
 
     <!-- 사이드 메뉴 -->
     {% include "menu/_side_menu.html" %}
