--- a/menu_project/static/css/style.css
+++ b/menu_project/static/css/style.css
@@ -713,7 +713,7 @@ body {
     border: 1px solid rgba(0,0,0);
     display: flex;
     align-items: center;
-    padding-bottom:1.5rem;
+    padding-bottom:2rem;
 }
 
 .menu-only-image {
@@ -748,7 +748,7 @@ body {
     font-size: 1.2rem;
     font-weight: 600;
     color: #fff;
-    margin: 0;
+    margin-bottom: 0.3rem;
     padding: 0;
     line-height: 1.1;
     flex: 1;
