--- a/menu_project/static/css/style.css
+++ b/menu_project/static/css/style.css
@@ -7,10 +7,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: rgb(0, 0, 0);
     z-index: 997;
-    box-sizing: border-box;
-    backdrop-filter: blur(5px);
 }
 
 .top-bar-buttons {
@@ -18,7 +16,6 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    padding: 10px; /* Added padding for spacing */
 }
 
 /* Side Menu */
