--- a/menu_project/static/css/style.css
+++ b/menu_project/static/css/style.css
@@ -75,7 +75,8 @@
     background: transparent;
     border: none;
     color: #fff;
-    font-size: 16px;
+    padding: 16px 10px; /* Adjusted padding to match height */
+    font-size: 1.8rem;
     outline: none;
 }
 
@@ -89,13 +90,10 @@
     left: 0;
     right: 0;
     z-index: 999;
-    background: rgba(0, 0, 0, 0.95);
-    border-radius: 8px;
-    border: 3px solid #000;
+    background: rgb(0, 0, 0);
     max-height: 300px;
     overflow-y: auto;
-    backdrop-filter: blur(10px);
-    margin-top: 5px;
+    
 }
 
 .search-result-item {
@@ -990,13 +988,8 @@ body {
     .search-container {
         left: 0px;
         right: 50px;
-        padding: 3px;
     }
     
-    .search-container input {
-        font-size: 14px;
-        padding: 8px;
-    }
     
     .search-nav {
         font-size: 14px;
@@ -1129,9 +1122,6 @@ body {
         right: 45px;
     }
     
-    .search-container input {
-        font-size: 16px; /* iOS zoom 방지 */
-    }
     
     
     .main {
